fix: footer spacing

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -143,8 +143,8 @@ main > section p {
 }
 
 footer {
-    margin: 8rem auto 0 auto;
-    padding: 0 2rem 6rem 3rem;
+    margin: 0 auto;
+    padding: 8rem 2rem 6rem 2rem;
     max-width: 69rem;
     color: #444;
     text-align: center;
